[package]
name = "leafline"
version = "0.0.18"
authors = ["Zack M. Davis <code@zackmdavis.net>"]

[dependencies]
ansi_term = "0.6"
argparse = "0.2"
itertools = "0.4"
libc = "0.2"
log = "0.3"
lru-cache = "0.1.2"
parking_lot = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
time = "0.1"
twox-hash = "1.0"
fnv = "1.0.3"
lazy_static = "1.3.0"
rand = "0.6"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
debug = true

[features]
run_benches = []